Fixed medium alignment

--- a/docs/assets/css/app.css
+++ b/docs/assets/css/app.css
@@ -5764,7 +5764,7 @@ a.thumbnail {
   .top-bar {
     margin-top: -10px;
     margin-right: auto;
-    margin-left: 110px; }
+    margin-left: 0px; }
   .top-bar-left {
     margin-top: 7px;
     margin-right: 40px;
@@ -5787,8 +5787,9 @@ a.thumbnail {
     max-width: 120px;
     height: auto;
     padding: 5;
-    margin-left: 110px; }
+    margin-left: 0; }
   .top-bar-right {
+    float: right;
     margin-left: 30px;
     top: 100px; }
   .top-bar-right li a {
